# hash-folderoo

./: .gitattributes  Cargo.toml  ROADMAP.md  config.json  config.toml  config.yaml  license.md  readme.md  spec.md
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: hash-folderoo.rb
packaging/homebrew/config/: README.md
packaging/scoop/: manifest.json
packaging/scoop/config/: README.md
scripts/: README.md  build.ps1  build.sh  ci-all.ps1  ci-all.sh  ci-checks.ps1  ci-checks.sh  format.ps1  format.sh  lint.ps1  lint.sh  smoke.ps1  smoke.sh  test.ps1  test.sh  type-check.ps1  type-check.sh
src/: bench.rs  cli.rs  compare.rs  config.rs  copy.rs  diff.rs  hash.rs  io.rs  lib.rs  main.rs  memory.rs  pipeline.rs  removempty.rs  renamer.rs  report.rs  utils.rs  walk.rs
src/algorithms/: blake2b.rs  blake2bp.rs  blake3.rs  k12.rs  mod.rs  parallelhash.rs  registry.rs  shake256.rs  tests.rs  turboshake.rs  wyhash.rs  xxh3.rs
tests/: cli_dry_git_diff.rs  cli_resume_plan.rs  cli_smoke.rs  compute_vectors.rs  expand_vectors.rs  memory_integration.rs
