[package]
name = "hash-folderoo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.7"
blake3 = "1.4"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
hex = "0.4"
walkdir = "2.3"
globset = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["blake3"]
blake3 = []
