[package]
name = "hash-folderoo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.7"
blake3 = "1.4"
sha3 = "0.10"
rayon = "1.7"
crossbeam = "0.8"
crossbeam-channel = "0.5"
indicatif = "0.17"
sysinfo = "0.29"
csv = "1.1"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
hex = "0.4"
walkdir = "2.3"
globset = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
filetime = "0.2"
tiny-keccak = { version = "2.0", features = ["k12", "parallel_hash"] }
blake2b_simd = "1.0"
turboshake = "0.5"

[features]
default = ["blake3"]
blake3 = []

[dev-dependencies]
tempfile = "3.5"
assert_cmd = "2.0"
predicates = "2.1"
